--- a/Automated_Essay_Grading.ipynb
+++ b/Automated_Essay_Grading.ipynb
@@ -6,7 +6,7 @@
       "name": "Automated Essay Grading.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPbqh7TnxNttJX3xvKLYkvS",
+      "authorship_tag": "ABX9TyMwSPJce8MnAUvWNe7dOKj8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,6 +37,7 @@
         "import nltk\n",
         "import pandas as pd\n",
         "import numpy as np\n",
+        "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "from nltk.stem import WordNetLemmatizer\n",
         "from nltk.corpus import wordnet\n",
@@ -44,16 +45,14 @@
         "from collections import defaultdict\n",
         "from sklearn.feature_extraction.text import CountVectorizer\n",
         "import sklearn.metrics as metrics\n",
+        "from sklearn.metrics import mean_squared_error\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
+        "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.svm import SVR\n",
         "from sklearn import ensemble\n",
-        "from sklearn.model_selection import GridSearchCV\n",
-        "from sklearn.metrics import cohen_kappa_score, mean_squared_error\n",
         "from sklearn.ensemble import RandomForestRegressor\n",
         "from sklearn.linear_model import LogisticRegression, SGDClassifier\n",
-        "from sklearn.svm import LinearSVC\n",
-        "import seaborn as sns"
+        "from sklearn.svm import LinearSVC"
       ],
       "execution_count": null,
       "outputs": []
@@ -64,7 +63,7 @@
         "id": "BjchRtmt8tuw"
       },
       "source": [
-        "Data Normalisation"
+        "**Data Normalization**"
       ]
     },
     {
@@ -1093,68 +1092,6 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Q7_E4EBS7nBV",
-        "outputId": "5b09fbb3-246b-4006-d115-ee32a9a897b4"
-      },
-      "source": [
-        "df2.skew()"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "essay_id         0.044368\n",
-              "essay_set        0.067896\n",
-              "domain1_score    2.475881\n",
-              "dtype: float64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 12
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "C05Tqia57rY_",
-        "outputId": "9b6db50c-d64d-46c3-ca55-80ae7077006c"
-      },
-      "source": [
-        "df2.kurtosis()"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "essay_id        -1.174375\n",
-              "essay_set       -1.151431\n",
-              "domain1_score    6.077899\n",
-              "dtype: float64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 13
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 351
         },
@@ -1162,7 +1099,7 @@
         "outputId": "8c8d3621-dc1a-4f2f-fa50-2c601afd9923"
       },
       "source": [
-        "sns.distplot(df2['domain1_score'])\n"
+        "sns.distplot(df2['domain1_score'])"
       ],
       "execution_count": null,
       "outputs": [
@@ -1209,6 +1146,7 @@
         "min_range = [2,1,0,0,0,0,0,0]\n",
         "max_range = [12,6,3,3,4,4,30,60]\n",
         "\n",
+        "#using min-max normalisation\n",
         "def normalize(x,mi,ma):\n",
         "    x = (x-mi)/(ma-mi)\n",
         "    return round(x*10)\n",
@@ -1229,7 +1167,7 @@
         "outputId": "136fd49d-44fd-4f58-fca5-96219f48ebaf"
       },
       "source": [
-        "sns.distplot(df2['final_score'])\n"
+        "sns.distplot(df2['final_score'])"
       ],
       "execution_count": null,
       "outputs": [
@@ -1279,7 +1217,6 @@
       },
       "source": [
         "df2.drop('domain1_score',axis=1,inplace=True)\n",
-        "\n",
         "df2.head()"
       ],
       "execution_count": null,
@@ -1485,6 +1422,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h4zWGrBJBAlN"
+      },
+      "source": [
+        "**Data Cleaning**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -1512,6 +1458,7 @@
         "df2['essay'] = df2['essay'].apply(lambda x:clean_essay(x))\n",
         "\n",
         "stop_words = set(stopwords.words('english')) \n",
+        "\n",
         "def remove_stop_words(essay):\n",
         "    word_tokens = word_tokenize(essay) \n",
         "    filtered_sentence = [] \n",
@@ -1679,52 +1626,7 @@
         "id": "sE55TgBDCK8T"
       },
       "source": [
-        "Machine Learning"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "WhW4dDsWCKFA"
-      },
-      "source": [
-        "vectorizer = CountVectorizer(max_features = 10000, ngram_range=(1, 3), stop_words='english')\n",
-        "count_vectors = vectorizer.fit_transform(df2['clean_essay'])\n",
-        "feature_names = vectorizer.get_feature_names()\n",
-        "data = df2[['essay_set','clean_essay','final_score']].copy()\n",
-        "X = count_vectors.toarray()\n",
-        "y = data['final_score'].to_numpy()\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "aizm_MaGCQYZ",
-        "outputId": "b8733fda-2cfe-45cd-9834-08a9cb2224dd"
-      },
-      "source": [
-        "from sklearn.metrics import mean_squared_error\n",
-        "\n",
-        "linear_regressor = LinearRegression()\n",
-        "linear_regressor.fit(X_train, y_train)\n",
-        "y_pred = linear_regressor.predict(X_test)\n",
-        "print(\"Mean squared error: %.2f\" % mean_squared_error(y_test, y_pred))"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Mean squared error: 680292489568085475328.00\n"
-          ],
-          "name": "stdout"
-        }
+        "**Machine Learning**"
       ]
     },
     {
@@ -1738,6 +1640,8 @@
         "outputId": "67767dbb-df00-4e18-e95e-56a4e2d78aa2"
       },
       "source": [
+        "#extracting features in the dataset\n",
+        "\n",
         "nltk.download('averaged_perceptron_tagger')\n",
         "\n",
         "pro_data = df2.copy()\n",
@@ -2021,6 +1925,8 @@
         "id": "Cmq57FkFgL1N"
       },
       "source": [
+        "#vectorization and train-test split\n",
+        "\n",
         "vectorizer = CountVectorizer(max_features = 5000, ngram_range=(1, 3), stop_words='english')\n",
         "count_vectors = vectorizer.fit_transform(pro_data['clean_essay'])\n",
         "feature_names = vectorizer.get_feature_names()\n",
@@ -2042,6 +1948,8 @@
         "outputId": "f3e59008-7a7c-4e3c-c2fe-848043cc955c"
       },
       "source": [
+        "#training the linear regression model\n",
+        "\n",
         "linear_regressor = LinearRegression()\n",
         "linear_regressor.fit(X_train, y_train)\n",
         "y_pred = linear_regressor.predict(X_test)\n",
@@ -2140,138 +2048,6 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2uLXjTXfbomX",
-        "outputId": "e65566d9-43cf-4c22-9c87-c71bcf77cdd7"
-      },
-      "source": [
-        "rf = RandomForestRegressor(n_estimators = 300, random_state = 42)\n",
-        "rf.fit(X_train, y_train)\n",
-        "y_pred = rf.predict(X_test)\n",
-        "print(\"Mean squared error: %.2f\" % mean_squared_error(y_test, y_pred))\n",
-        "print(\"R^2 score: %.2f\" % r2_score(y_test, y_pred))"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Mean squared error: 2.06\n",
-            "R^2 score: 0.66\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "__yqJOt5ls19",
-        "outputId": "55a4e291-3c57-4c82-a1cd-1fc3d83a2f69"
-      },
-      "source": [
-        "count = 0\n",
-        "total = 0\n",
-        "rf = RandomForestRegressor(n_estimators = 150, random_state = 42)\n",
-        "rf.fit(X_train, y_train)\n",
-        "y_pred = rf.predict(X_test).round()\n",
-        "for i in y_test:\n",
-        "  if (y_test[i]==y_pred[i]):\n",
-        "    count = count + 1\n",
-        "  total = total + 1\n",
-        "accuracy = count/total*100\n",
-        "accuracy"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "32.49422039558181"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 26
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "fnWdFB5BoKuP",
-        "outputId": "7a7b1fed-a28c-4287-f28b-713634cb445a"
-      },
-      "source": [
-        "count = 0\n",
-        "total = 0\n",
-        "rf = RandomForestRegressor(n_estimators = 150, random_state = 42)\n",
-        "rf.fit(X_train, y_train)\n",
-        "y_pred = rf.predict(X_test).round()\n",
-        "for i in y_test:\n",
-        "  if (y_test[i]==y_pred[i]) or (y_test[i]==y_pred[i]+1) or (y_test[i]==y_pred[i]-1):\n",
-        "    count = count + 1\n",
-        "  total = total + 1\n",
-        "accuracy = count/total*100\n",
-        "accuracy"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "65.96455175956845"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 27
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gtbBNXJ2fnAk",
-        "outputId": "71b8a230-0ae9-424a-cbef-df2925fcc173"
-      },
-      "source": [
-        "rf = RandomForestRegressor(n_estimators = 500, random_state = 42)\n",
-        "rf.fit(X_train, y_train)\n",
-        "y_pred = rf.predict(X_test)\n",
-        "print(\"Mean squared error: %.2f\" % mean_squared_error(y_test, y_pred))\n",
-        "print(\"R^2 score: %.2f\" % r2_score(y_test, y_pred))"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Mean squared error: 2.06\n",
-            "R^2 score: 0.66\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
@@ -2279,6 +2055,8 @@
         "outputId": "8d6fe0f3-6ab7-4fa3-aa19-c1e7601b70cc"
       },
       "source": [
+        "#finding optimal n_estimators for the random forest model\n",
+        "\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "MSE = []\n",
@@ -2441,10 +2219,118 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "__yqJOt5ls19",
+        "outputId": "55a4e291-3c57-4c82-a1cd-1fc3d83a2f69"
+      },
+      "source": [
+        "#training the random forest model\n",
+        "\n",
+        "count = 0\n",
+        "total = 0\n",
+        "rf = RandomForestRegressor(n_estimators = 150, random_state = 42)\n",
+        "rf.fit(X_train, y_train)\n",
+        "y_pred = rf.predict(X_test).round()\n",
+        "for i in y_test:\n",
+        "  if (y_test[i]==y_pred[i]):\n",
+        "    count = count + 1\n",
+        "  total = total + 1\n",
+        "accuracy = count/total*100\n",
+        "accuracy"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "32.49422039558181"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fnWdFB5BoKuP",
+        "outputId": "7a7b1fed-a28c-4287-f28b-713634cb445a"
+      },
+      "source": [
+        "count = 0\n",
+        "total = 0\n",
+        "rf = RandomForestRegressor(n_estimators = 150, random_state = 42)\n",
+        "rf.fit(X_train, y_train)\n",
+        "y_pred = rf.predict(X_test).round()\n",
+        "for i in y_test:\n",
+        "  if (y_test[i]==y_pred[i]) or (y_test[i]==y_pred[i]+1) or (y_test[i]==y_pred[i]-1):\n",
+        "    count = count + 1\n",
+        "  total = total + 1\n",
+        "accuracy = count/total*100\n",
+        "accuracy"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "65.96455175956845"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gtbBNXJ2fnAk",
+        "outputId": "71b8a230-0ae9-424a-cbef-df2925fcc173"
+      },
+      "source": [
+        "rf = RandomForestRegressor(n_estimators = 500, random_state = 42)\n",
+        "rf.fit(X_train, y_train)\n",
+        "y_pred = rf.predict(X_test)\n",
+        "print(\"Mean squared error: %.2f\" % mean_squared_error(y_test, y_pred))\n",
+        "print(\"R^2 score: %.2f\" % r2_score(y_test, y_pred))"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mean squared error: 2.06\n",
+            "R^2 score: 0.66\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "hCyA9y6wnlpE",
         "outputId": "2efc3bf3-7ed6-4160-d076-13b027b3db78"
       },
       "source": [
+        "#training the support vector regression model\n",
+        "\n",
         "clf = SVR(C=1.0, epsilon=0.2)\n",
         "clf.fit(X_train, y_train)\n",
         "y_pred=clf.predict(X_test)\n",
@@ -2478,17 +2364,6 @@
           "execution_count": 32
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "3LQiDnZ5HqcF"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
